--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,20 @@
 ---
-name: Tails Azimuth
+name: 陳凱詳 Kaix
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Software Engineer
+email: me@kaixsean.com
+twitter: https://twitter.com/kaixsean
+linkedin: https://www.linkedin.com/in/kaixiangchen/
+github: https://github.com/kaixsean
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+我是一位全端軟體工程師。  
+我喜歡 Web，也開發過 APP。  
+我很好奇，也喜歡紀錄。  
+在這裡我會分享我的興趣與學習，以科技、自我成長、旅行為主。
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+I am a full-stack software engineer with a passion for web development and mobile app development. I am also a curious learner who loves to document my experiences.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+On this blog, I will share my interests and learnings in the areas of technology, personal growth, and travel.
+
+I hope you will enjoy reading my posts and find them informative and inspiring.
