feature: modify posts

--- a/data/blog/20140803-wrong-gallery.mdx
+++ b/data/blog/20140803-wrong-gallery.mdx
@@ -4,7 +4,7 @@ summary:  週末經學長的介紹，來到 Wrong Gallery Taipei 靠邊走藝術
 slug:  wrong-gallery
 images: ['https://img.kaixsean.com/2014/Iron_Patriot.jpg']
 date: '2014-08-31'
-tags: ['Travel']
+tags: ['travel']
 ---
 
 週末經學長的介紹，來到 Wrong Gallery Taipei 靠邊走藝術空間。
