--- a/data/blog/20170425-coldplay-tour2017.mdx
+++ b/data/blog/20170425-coldplay-tour2017.mdx
@@ -4,7 +4,7 @@ summary:  等了15年，終於在 2017年4月12日等到了 Coldplay A Head Ful
 slug:  coldplay-tour-2017
 images:  ['https://img.kaixsean.com/2017/33387853783.jpg']
 date: '2017-04-25'
-tags: ['Music']
+tags: ['music']
 --- 
 
 ![](https://img.kaixsean.com/2017/33387853783.jpg)
