--- a/data/blog/20200617-algolia-jekyll.mdx
+++ b/data/blog/20200617-algolia-jekyll.mdx
@@ -4,7 +4,7 @@ summary:  algolia 是一個提供搜尋功能的服務，之所以沒有使用 g
 slug:  algolia-jekyll
 images:  ['https://img.kaixsean.com/2020/searchPage.png']
 date: '2020-06-17'
-tags: ['StaticSiteGenerator']
+tags: ['web']
 --- 
 
 ## 前言
