--- a/data/blog/20200827-podcast-recommend.mdx
+++ b/data/blog/20200827-podcast-recommend.mdx
@@ -4,7 +4,7 @@ summary:  Podcast 就是隨選的數位廣播，聲音形式的 Netflix，或者
 slug:  podcast-recommend
 date: '2020-08-27'
 images:  ['https://img.kaixsean.com/2020/post-bg-podcast.jpg']
-tags: ['Podcast']
+tags: ['life']
 --- 
 ## 緣起
 今年初，台灣 Podcast 突然大熱。對於已經聽 Podcast 多年的我來說，終於等到身邊的人都漸漸知道什麼是 Podcast ，覺得相當感動。
