--- a/data/blog/20201018-algolia-netlify-deploy-en.mdx
+++ b/data/blog/20201018-algolia-netlify-deploy-en.mdx
@@ -4,7 +4,7 @@ summary:  Cause lazy, so I want to find a way to setting Algolia automatically.
 slug:  algolia-netlify-deploy
 date: '2020-10-18'
 images:  ['https://img.kaixsean.com/2020/netlifySettingAlgolia.png']
-tags: ['StaticSiteGenerator']
+tags: ['web']
 ---
 
 Cause lazy, so I want to find a way to setting Algolia automatically. At first, I found the [Travis CI - Test and Deploy with Confidence](https://travis-ci.com/) could do. But actually, the Netlify also has a service like that, when you deploy.  
