--- a/data/blog/20210109-firstrade-us-stock.mdx
+++ b/data/blog/20210109-firstrade-us-stock.mdx
@@ -4,7 +4,7 @@ summary:  Firstrade 交易股票及 ETF 都是 免手續費的，相比在台灣
 slug:  firstrade
 images:  ['https://img.kaixsean.com/2022/maxim-hopman-unsplash.jpeg']
 date: '2021-01-09'
-tags: ['Stock']
+tags: ['life']
 ---
 
 去年因為在台股上做得不太順手...對，很好笑吧，2020 股市明明是個躺著賺錢的市場。在看到台幣不斷上漲的情況下，因此決定重新航向美股。一開始是使用 [eToro](https://www.etoro.com/zh-tw/)，因為不太穩定，且也不斷看到各種提醒說 eToro 買的並非實股。再加上 eToro 的 ETF 確實也只能用價差合約的方式交易，想了想決定重開一年前曾使用過的 [Firstrade](https://www.firstrade.com/content/zh-tw/welcome)。
