--- a/data/blog/20210209-seanspaper-ep1.mdx
+++ b/data/blog/20210209-seanspaper-ep1.mdx
@@ -4,7 +4,7 @@ summary: 本週可以說是 Clubhouse 佔據的一週，彷如一座新寶山，
 slug:  sean-paper
 images:  ['https://img.kaixsean.com/2022/roman-kraft-unsplash.jpeg']
 date: '2021-02-09'
-tags: ['SeansPaper']
+tags: ['life']
 ---
 # 前言
 
