--- a/data/blog/20210213-gandi-promo.mdx
+++ b/data/blog/20210213-gandi-promo.mdx
@@ -4,7 +4,7 @@ summary:  因為真心喜歡 Gandi 的服務，這邊就順便推薦一下，不
 slug:  gandi-promo
 images:  ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
 date: '2021-02-13'
-tags: ['AD']
+tags: ['web']
 --- 
 
 前陣子去參加在 Gandi 辦的活動，受益頗豐。
