--- a/data/blog/20220730-oculus-quest2.mdx
+++ b/data/blog/20220730-oculus-quest2.mdx
@@ -4,7 +4,7 @@ summary:  用了 Oculus Quest2 一段時間後的想法
 slug:  oculus-quest2
 images: ['https://img.kaixsean.com/2022/oculus-with-me.JPG']
 date: '2022-07-30'
-tags: ['Life']
+tags: ['life']
 ---
 
 ![oculus with me](https://img.kaixsean.com/2022/oculus-with-me.JPG)
