--- a/data/blog/20140720-coscup2014.mdx
+++ b/data/blog/20140720-coscup2014.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'COSCUP 2014'
 date: '2014-07-20'
-tags: ['Diary']
+tags: ['life']
 summary: 今年的 COSCUP，贊助商更多了，食物也多了，連履歷也可以在這裡丟了。KKBOX、痞客邦、華碩雲端，各家公司直接搶人。
 slug: coscup-2014
 images: ['https://img.kaixsean.com/2014/coscup2014.jpg']
