--- a/data/blog/20180714-hugo-gitlab.mdx
+++ b/data/blog/20180714-hugo-gitlab.mdx
@@ -4,7 +4,7 @@ summary:  GitLab 有針對許多 static site generators 做範例頁面
 slug:  hugo-gitlab
 images:  ['https://img.kaixsean.com/2018/28382740417.png']
 date: '2018-07-14'
-tags: ['StaticSiteGenerator']
+tags: ['web']
 ---
 不久前，GitHub 被 Microsoft 收購的新聞甚囂塵上，我也跟著搬遷到了 GitLab。 此前是用 Jekyll 架設，搬到 GitLab 後，基於 GitLab 也搬到 GCP(Google Cloud Platform)，並已轉用 Go 語言，讓我也想要嘗試以 Go 語言為基底的 Hugo。
 
