feat: modify index page images

--- a/data/blog/20220131-hello-2022.mdx
+++ b/data/blog/20220131-hello-2022.mdx
@@ -1,7 +1,7 @@
 ---
 title: '2022 新的開始'
 summary: 時間飛快，又過一年。走過疫情的這兩年，覺得自己有許多成長，甚至是出乎自己的意料之外。
-images: ['https://img.kaixsean.com/2021/annie-spratt-Ef1H5YTTmZ8-unsplash.jpg']
+images: ['https://img.kaixsean.com/2023/newyear.jpg']
 date: '2022-01-31'
 tags: ['life']
 ---
