--- a/data/blog/20220929-report-2022.mdx
+++ b/data/blog/20220929-report-2022.mdx
@@ -1,7 +1,7 @@
 ---
 title: '半年回顧與新的開始'
 summary:  這半年來的回顧跟未來展望
-images: ['https://img.kaixsean.com/2022/jeshoots-unsplash.jpeg']
+images: ['https://img.kaixsean.com/2023/newyear.jpg']
 date: '2022-09-29'
 tags: ['life']
 ---
