--- a/data/blog/20210215-the-new-plan-2021.mdx
+++ b/data/blog/20210215-the-new-plan-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: '新年要有新希望 2021'
 summary:  打算藉由這一篇好好思考，接下來的一年要有什麼計畫。雖說每年都會做，但往往達不到，也是一種常態了。但終究是一年之初，有個規劃，才不至於一整年失去方向。
-images:  ['https://img.kaixsean.com/2021/annie-spratt-Ef1H5YTTmZ8-unsplash.jpg']
+images: ['https://img.kaixsean.com/2023/newyear.jpg']
 date: '2021-02-15'
 tags: ['life']
 ---
