--- a/data/blog/20210625-how-to-recycle.mdx
+++ b/data/blog/20210625-how-to-recycle.mdx
@@ -1,7 +1,7 @@
 ---
 title: '紙容器跟蛋盒可以回收嗎？'
 summary:  根據行政院環保署的資料，紙容器還是必須回收的，只是並不分類在紙類，而是「紙容器」類。環保署為此也拍了一個小影片說明。
-images: ['https://img.kaixsean.com/2022/gary-chan-unsplash.jpeg']
+images: ['https://img.kaixsean.com/2023/recycle.jpg']
 date: '2021-06-25'
 tags: ['life']
 ---
