--- a/data/blog/20210919-medigen.mdx
+++ b/data/blog/20210919-medigen.mdx
@@ -1,7 +1,7 @@
 ---
 title: '瘟疫時代記 高端仔'
 summary:  打高端第一劑已有四週了，除了第二天兩隻手臂肌肉酸痛外，並沒有其他任何感覺。
-images: ['https://img.kaixsean.com/2021/medigenOne.jpeg']
+images: ['https://img.kaixsean.com/2023/vaccine.jpg']
 date: '2021-09-19'
 tags: ['life']
 ---
