--- a/data/posts/20210209-seanspaper-ep1.mdx
+++ b/data/posts/20210209-seanspaper-ep1.mdx
@@ -5,15 +5,15 @@ images:  ['https://img.kaixsean.com/2022/roman-kraft-unsplash.jpeg']
 date: '2021-02-09'
 tags: ['life']
 ---
-# 前言
+## 前言
 
-#Clubhouse
+### Clubhouse
 
 本週可以說是 Clubhouse 佔據的一週，彷如一座新寶山，拿到車票的眾人紛紛帶著工具前往掏金。看著生態系慢慢擴大，有人抱怨、有人興奮、有人不適應，充滿活力的現象，確實很有潛力。
 
 接著繼續分享我對於本週揀選的新聞重點
 
-## [谷歌撤離澳洲 澳媒：微軟將填補空缺擴大服務](https://www.rti.org.tw/news/view/id/2090652) 
+[谷歌撤離澳洲 澳媒：微軟將填補空缺擴大服務](https://www.rti.org.tw/news/view/id/2090652) 
 
 #Google #Microsoft #Australia
 
@@ -23,14 +23,14 @@ tags: ['life']
 但話說回來，Google News 的內容不也是媒體同業，自己願意上架的嗎？且新聞媒體議價法的施行，會不會造成新創成本的墊高而變成另一種絆腳石與反競爭？  
 媒體是第四權，正因這身份的特殊性，科技、媒體、國家該如何互動，還有賴時間與智慧來解決。
 
-## [Google 宣佈關閉 Stadia 內部遊戲開發部門](https://www.inside.com.tw/article/22453-google-shutters-in-house-stadia-games-development-studio)
+[Google 宣佈關閉 Stadia 內部遊戲開發部門](https://www.inside.com.tw/article/22453-google-shutters-in-house-stadia-games-development-studio)
 
 #Google #Stadia #CloudGaming
 
 雲端遊戲絕對是今年的重點項目之一，Google 此舉我認為是回歸自身，專注在技術領域，集中資本好與其他大廠競爭。
 畢竟，截至目前為止，參與這場競技的巨頭們已經有 Amazon Luna、Nvidia Geforce Now、Microsoft Xbox Game Pass、Google Stadia、Sony PlayStation Now （和 Microsoft Azure 合作），而 Facebook 及 Apple 也表示這場戰爭，絕不缺席。好不熱鬧。
 
-## [中國網路巨頭法律戰抖音控壟斷、騰訊反斥惡意誣陷](https://www.cna.com.tw/news/firstnews/202102020324.aspx)
+[中國網路巨頭法律戰抖音控壟斷、騰訊反斥惡意誣陷](https://www.cna.com.tw/news/firstnews/202102020324.aspx)
 
 #tiktok #tencent 
 
@@ -38,11 +38,11 @@ tags: ['life']
 
 在美國，Facebook 正與 Apple 因為 iOS 14 的隱私權新規定而槓上法院。中國這廂也沒閒著，抖音也因為連結被騰訊封殺而氣得告上法庭。因為這次互告的都是中國企業，所以我還蠻好奇最後的結果會是怎樣。
 
-## [亞馬遜貝佐斯9月交棒 新執行長賈西專精雲端業務](https://www.cna.com.tw/news/firstnews/202102030025.aspx) 
+[亞馬遜貝佐斯9月交棒 新執行長賈西專精雲端業務](https://www.cna.com.tw/news/firstnews/202102030025.aspx) 
 
 #Amazon #JeffBezos #BlueOrigin
 
 貝佐斯沒有要退休，而是要專心去弄Blue Origin(藍色起源)的太空業務了。根據維基百科的資料，截至2017年4月，貝佐斯每年都會出售約10億美元的亞馬遜股票以私人融資Blue Origin。Blue Origin的業務跟Tesla 特斯拉執行長 Musk 馬斯克的 SpaceX 還蠻接近的，太空旅行、軌道衛星計畫。
 
-# 後記
+## 後記
 這禮拜都在玩 Clubhouse，我只想說，喔！我真心喜歡這個 app！看 Cloudhouse 這樣，實在也很想拿背後的技術， Agora 做點什麼。然後我昨天就先試單買一股了（疑）。
