feat: add new post and new tag

--- a/data/posts/20190801-hugo-netlify.mdx
+++ b/data/posts/20190801-hugo-netlify.mdx
@@ -3,7 +3,7 @@ title: '部落格搬遷 第 N 次開站'
 summary:  這次一樣採用 Hugo 來架站 ，但在整體架構上做了一些調整 ，不使用 Gitlab Page 或 Github Page，而是選擇了 Netlify 做 Host。
 images:  ['https://img.kaixsean.com/2019/blog_index.png']
 date: '2019-08-01'
-tags: ['web']
+tags: ['blog']
 --- 
 
 ![首頁](https://img.kaixsean.com/2019/blog_index.png)
