--- a/data/posts/20200301-static-site-generator.mdx
+++ b/data/posts/20200301-static-site-generator.mdx
@@ -3,7 +3,7 @@ title: '我又搬回了 Jekyll'
 summary:  由於在使用 Gatsby 的自訂化設定，屢屢遇到難題，始終無法達成心目中的想像，最後決定換回 Jekyll。
 images:  ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
 date: '2020-03-01'
-tags: ['web']
+tags: ['blog']
 --- 
 
 ## 前言
