--- a/data/posts/20200327-ubuntu-jekyll.mdx
+++ b/data/posts/20200327-ubuntu-jekyll.mdx
@@ -3,7 +3,7 @@ title: 'Ubuntu 18.04 安裝 Jekyll 輕鬆上手'
 summary:  演示如何在 Ubuntu 下安裝 Jekyll
 images:  ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
 date: '2020-03-27'
-tags: ['web']
+tags: ['blog']
 ---
 
 ## 前言
