--- a/data/posts/20201018-algolia-netlify-deploy-en.mdx
+++ b/data/posts/20201018-algolia-netlify-deploy-en.mdx
@@ -3,7 +3,7 @@ title: 'How to set Algolia by Netlify deploy'
 summary:  Cause lazy, so I want to find a way to setting Algolia automatically.
 date: '2020-10-18'
 images:  ['https://img.kaixsean.com/2020/netlifySettingAlgolia.png']
-tags: ['web']
+tags: ['blog']
 ---
 
 Cause lazy, so I want to find a way to setting Algolia automatically. At first, I found the [Travis CI - Test and Deploy with Confidence](https://travis-ci.com/) could do. But actually, the Netlify also has a service like that, when you deploy.  
