--- a/data/posts/20180223-gcp-wordpress.mdx
+++ b/data/posts/20180223-gcp-wordpress.mdx
@@ -3,7 +3,7 @@ title: '使用 Google Cloud Platform 簡單建立 Wordpress'
 summary:  許多人都會使用 Wordpress 來架部落格，甚至有很多商業網站也都直接用 Wordpress 來架設。現在，Google 旗下的 Google Cloud Platform (以下簡稱 GCP) 也有提供這樣的方式。
 images:  ['https://img.kaixsean.com/2018/36460755133.jpg']
 date: '2018-02-23'
-tags: ['web']
+tags: ['blog']
 ---
 許多人都會使用 Wordpress 來架部落格，甚至有很多商業網站也都直接用 Wordpress 來架設。
 
