--- a/data/posts/20200927-netlify-algolia-deploy.mdx
+++ b/data/posts/20200927-netlify-algolia-deploy.mdx
@@ -3,7 +3,7 @@ title: '使用 Netlify 自動 deploy Algolia'
 summary:  由於太懶惰了，想要節省掉這樣的重複性動作與時間，因此搜尋了一些方式。
 date: '2020-09-27'
 images:  ['https://img.kaixsean.com/2020/netlifySettingAlgolia.png']
-tags: ['web']
+tags: ['blog']
 --- 
 之前說過本站搜尋使用 algolia 的服務，但每次產生文章之後，就必須跑一次 algolia 的指令，才能上傳資料到 algolia 建檔。  
 由於太懶惰了，想要節省掉這樣的重複性動作與時間，因此搜尋了一些方式。一開始是找到可以透過 [Travis CI - Test and Deploy with Confidence](https://travis-ci.com/)，後來發現 Netlify 本身就有包含這樣的工具了，而且做法也不難，如下說明：
