--- a/data/posts/20240404-my-portfolio.mdx
+++ b/data/posts/20240404-my-portfolio.mdx
@@ -1,5 +1,5 @@
 ---
-title: '完成我的個人Portfolio頁面'
+title: 'My Portfolio'
 summary: 使用 Next.js 建立個人Portfolio頁面。
 images: ['https://img.kaixsean.com/2023/newyear.jpg']
 date: '2024-04-04'
@@ -12,8 +12,8 @@ tags: ['life']
 不同於部落格，採用別人的主題來修改。這次跟學習 React/Next.js 這件事綁在一塊，也因為僅僅只有單頁，覺得能降低學習的難易度，不會有一下子太多東西要學習，導致最後還是忘光光。
 然而，原本一開始是要用 JavaScript 的，但在處理 metadata 時還是遇到了困難，照 Next.js 做的範例，始終不成功。最後還是改回 Next.js 預設的 TypeScript。也還好，彼此差異不多，其實也沒需要到特別調整什麼。
 
-使用到的資源有以下
-[Next.js 官方學習](https://nextjs.org/learn) CH1 ~ CH5
+使用到的資源有以下  
+[Next.js 官方學習](https://nextjs.org/learn) CH1 ~ CH5  
 [Beginning our React todo list](https://developer.mozilla.org/zh-TW/docs/Learn/Tools_and_testing/Client-side_JavaScript_frameworks/React_todo_list_beginning)
 
 這次製作的頁面是單一頁面的靜態頁面，所以沒有連結資料庫，只用上了 Layouts、Components、Events、Status 以及一些 Metadata 和 SEO相關。
