fix: fix YouTube video

--- a/data/posts/20150103-shei-pa.mdx
+++ b/data/posts/20150103-shei-pa.mdx
@@ -25,7 +25,7 @@ tags: ['travel']
 
 ![img_1145](https://img.kaixsean.com/2015/IMG_1145.jpg)
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/EDMnuDztD_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<YouTube id="EDMnuDztD_o" />
 
 下午則是到雪霸休閒農場，走了野馬瞰山步道。步道位於農場裡面，來回約2到3公里。
 
