--- a/data/posts/20151122-dadaocheng.mdx
+++ b/data/posts/20151122-dadaocheng.mdx
@@ -9,7 +9,7 @@ tags: ['travel']
 
 一開始先在大稻埕旅遊資訊站集合，這裡在活動期間被台灣吧佔據，處處是台灣吧的周邊商品，二樓還有一些台灣吧結合大稻埕歷史文化的展覽。
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/7cXQhHMsUnA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<YouTube id="7cXQhHMsUnA" />
 
 ![img_0275](https://img.kaixsean.com/2015/img_0275.jpg)
 
@@ -25,7 +25,7 @@ tags: ['travel']
 
 關於迪化街為年貨大街則可以參看「故事台北：年貨大街」會比較清楚。
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Qi0Dp9dYX1Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<YouTube id="Qi0Dp9dYX1Y" />
 
 ![p1120500](https://img.kaixsean.com/2015/p1120500.jpg)
 
