--- a/data/posts/20210625-how-to-recycle.mdx
+++ b/data/posts/20210625-how-to-recycle.mdx
@@ -12,7 +12,7 @@ tags: ['life']
 首先，關於紙容器到底能不能回收，有以下這樣的說法：紙容器不完全是紙，上面還有一層防水防油的塑膠淋膜，因此無法回收。  
 然而，根據行政院環保署的資料，紙容器還是必須回收的，只是並不分類在紙類，而是「紙容器」類。環保署為此也拍了一個小影片說明。
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/t7XGZcTs7Yk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<YouTube id="t7XGZcTs7Yk" />
 
 ## 蛋盒可以回收嗎？
 答案是可以的。根據 RE-THINK 重新思考環境教育協會所製作的[透明雞蛋盒回收：透明雞蛋盒回收要怎麼做？｜回收大百科](https://recycle.rethinktw.org/trash/23)網頁中，有說明透明雞蛋盒屬於塑膠容器類，必須回收。
