feat: modify post

--- a/data/posts/20240922-chiangmai.mdx
+++ b/data/posts/20240922-chiangmai.mdx
@@ -1,6 +1,6 @@
 ---
 title: '愛上清邁悠閒時光：清邁行程推薦'
-summary: 2023年我去了清邁，然後愛上了清邁的悠閒時光
+summary: 2023年11月我去了清邁，然後愛上了清邁的悠閒時光
 images: ['https://img.kaixsean.com/2023/chiangmai.jpg']
 date: '2024-09-22'
 tags: ['travel']
@@ -18,7 +18,7 @@ tags: ['travel']
 ### 泰北咖哩湯麵 Khao Soi Maesai
 
 ![Khao Soi Maesai](https://img.kaixsean.com/2023/Khao_Soi_Maesai.jpeg)
-這家連續好幾年都是米其林必比登推薦，也是許多人推薦的選擇。如果只吃一家，我也推薦這家。
+這家連續好幾年都是米其林必比登推薦，也是許多人推薦的選擇。如果只吃一家，推薦這家。
 
 [https://maps.app.goo.gl/K72PQXtTyHvEDiLMA](https://maps.app.goo.gl/K72PQXtTyHvEDiLMA)
 
@@ -28,23 +28,17 @@ tags: ['travel']
 
 [https://maps.app.goo.gl/5LG7APbwT5EG6veB6](https://maps.app.goo.gl/5LG7APbwT5EG6veB6)
 
-### Khao Soi Khun Yai
-
-這家是看網友推薦，不是米其林
-
-[https://maps.app.goo.gl/mUQAd4zvP1uo8fUw7](https://maps.app.goo.gl/mUQAd4zvP1uo8fUw7)
-
 ## 店家
 
 ### Chiang Mai Cosmetics
 
-如果你跟我一樣，住宿在老城區的話，這家是一定要去！是整個老城區裡面最好逛的美妝店了，而且也很便宜！東西蠻豐富的，也蠻接近五金行、雜貨店。
+如果你跟我一樣，住宿在老城區的話，這家是一定要去！是整個老城區裡面最好逛的美妝店了，而且也很便宜！東西蠻豐富的，有點像是五金行、雜貨店。而且拯救忘了帶牙刷、牙膏的我。
 
 [https://maps.app.goo.gl/a5BQpcomLdHxLhS1A](https://maps.app.goo.gl/a5BQpcomLdHxLhS1A)
 
 ### PLAYWORKS SHOP&CAFE
 
-![PLAYWORKS](https://storage.googleapis.com/img.kaixsean.com/2023/playworks.jpeg)
+![PLAYWORKS](https://img.kaixsean.com/2023/playworks.jpeg)
 
 這家是我的愛店！如果你是文青的話，一定會喜歡。裡面主要販售，設計服飾、設計商品、香氛等等。
 
@@ -56,8 +50,10 @@ tags: ['travel']
 
 ### Neng Earthen Jar Roast Pork
 
+![Neng Earthen Jar Roast Pork](https://img.kaixsean.com/2023/pork.jpeg)
 這家地點稍顯偏僻，販售甕烤豬肉，評價很好。
 
+![Neng Earthen Jar Roast Pork part2](https://img.kaixsean.com/2023/pork_chicken.jpeg)
 不過我實地參訪結果，個人口味覺得還可以，不難吃，但也不到驚艷。
 
 [https://maps.app.goo.gl/4UgafJ2GhqPp87uv9](https://maps.app.goo.gl/4UgafJ2GhqPp87uv9)
@@ -86,6 +82,8 @@ tags: ['travel']
 
 ### AT KHUA LEK Cafe & Restaurant
 
+![AT KHUA LEK Cafe & Restaurant](https://img.kaixsean.com/2023/AT%20KHUA%20LEK%20Cafe%20%26%20Restaurant.JPG)
+
 坐擁河岸的景觀餐廳，且附有音樂表演，可以很愜意的享受河岸晚餐。
 
 [https://maps.app.goo.gl/jeAxojnbA4ybL1H99](https://maps.app.goo.gl/jeAxojnbA4ybL1H99)
@@ -104,7 +102,10 @@ tags: ['travel']
 
 ### Amataros Sourdough Pizza
 
+![Amataros Sourdough Pizza](https://img.kaixsean.com/2023/Amataros%20Sourdough%20Pizza.jpeg)
 超級推薦的西式餐廳，唯一的缺點是位處的地點太偏僻。咖啡、義大利麵、披薩，每一樣都好吃。是此趟旅行吃過最好吃的，若搬到台北開，相信也會是一家大名店。雖然裝潢到餐點都很精緻，但畢竟是在清邁，高貴不貴。
+
+![Amataros Sourdough Pizza Food](https://img.kaixsean.com/2023/Amataros%20Sourdough%20Pizza_food.jpeg)
 
 [https://maps.app.goo.gl/5gd4FGC7dCnYSzBQ7](https://maps.app.goo.gl/5gd4FGC7dCnYSzBQ7)
 
@@ -120,6 +121,8 @@ tags: ['travel']
 
 ### ไชย เรสเตอรอง Chai Restaurant
 
+![ไชย เรสเตอรอง Chai Restaurant](https://img.kaixsean.com/2023/music_bar.jpeg)
+
 我不擅夜生活，但還是去了這家位於清邁門邊的小酒吧。氣氛很好，也會有音樂表演。
 
 [https://maps.app.goo.gl/45cSTSuWCPPTahBF6](https://maps.app.goo.gl/45cSTSuWCPPTahBF6)
@@ -130,7 +133,10 @@ tags: ['travel']
 
 ### GRAPH
 
-清邁最大的連鎖咖啡廳，每一間主題都不一樣。
+![Graph no.18](https:/img.kaixsean.com/2023/graph_18.JPG)
+![SOMPETCH](https://img.kaixsean.com/2023/sompetch.JPG)
+
+清邁最大的連鎖咖啡廳，每一間主題都不一樣。GRAPH 這間就在尼曼路一號商場裡面，甚是方便。
 
 ### Pegasus Café & Roastery
 
@@ -141,6 +147,8 @@ tags: ['travel']
 [https://maps.app.goo.gl/6YtoYY4WKHy2k23J8](https://maps.app.goo.gl/6YtoYY4WKHy2k23J8)
 
 ### Living A Dream
+
+![Living A Dream](https://img.kaixsean.com/2023/living_a_dream.jpeg)
 
 位於清邁大學裡面的校園咖啡廳，逛完校園可以來喝，環境很棒。也不少人會在這邊遠端工作，推推！
 
@@ -156,11 +164,7 @@ tags: ['travel']
 
 ### Fah Lanna Spa
 
-連鎖店，從名稱就標誌著清邁特色，環境也很棒，在Klook、KKday等網路平台就可以預訂了。
-
-[https://affiliate.klook.com/redirect?aid=14941&aff_adid=908665&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F711-fah-lanna-spa-chiangmai%2F%3F%2520clickId%3Dd62cdefa0e%26spm%3DActivity.TopNavigation.SelectLanguage%26clickId%3D9288fa032f](https://affiliate.klook.com/redirect?aid=14941&aff_adid=908665&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F711-fah-lanna-spa-chiangmai%2F%3F%2520clickId%3Dd62cdefa0e%26spm%3DActivity.TopNavigation.SelectLanguage%26clickId%3D9288fa032f)
-
-[https://www.kkday.com/zh-tw/product/3595](https://www.kkday.com/zh-tw/product/3595)
+連鎖店，從名稱就標誌著清邁特色，環境也很棒，在[Klook](https://affiliate.klook.com/redirect?aid=14941&aff_adid=908665&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F711-fah-lanna-spa-chiangmai%2F%3F%2520clickId%3Dd62cdefa0e%26spm%3DActivity.TopNavigation.SelectLanguage%26clickId%3D9288fa032f)、[KKday](https://www.kkday.com/zh-tw/product/3595)等網路平台就可以預訂了。
 
 ### Giving Tree Massage
 
@@ -172,6 +176,7 @@ tags: ['travel']
 
 ### 帕邢寺
 
+![Wat Phra Singh](https://img.kaixsean.com/2023/wat_phra_singh.jpeg)
 清邁歷史上第二悠久的寺廟，有超過600年的歷史，三大寺廟之一。
 
 [https://maps.app.goo.gl/ueHGtjzpUeLSNpat5](https://maps.app.goo.gl/ueHGtjzpUeLSNpat5)
@@ -192,7 +197,7 @@ tags: ['travel']
 
 同樣超過600年的歷史，位於老城區的中心，裡面奉有城市之柱，是清邁最有名的寺廟。
 
-因居住的民宿就位於附近，所以也是我最常拜訪的寺廟，因而有機會看到各個時辰的樣貌，個人非常喜歡！
+因居住的民宿就位於附近，所以也是我最常拜訪的寺廟，因而有機會看到各個時辰的樣貌，也是我在清邁最喜歡的寺廟！
 
 [https://maps.app.goo.gl/wRzNpyj3qfCcLU7Y8](https://maps.app.goo.gl/wRzNpyj3qfCcLU7Y8)
 
@@ -202,6 +207,8 @@ tags: ['travel']
 也有700年以上了，特別的是，是一個地道中的寺廟，位於素帖山腳，很適合跟雙龍寺排在一起參訪。很安靜，遊客不多。
 
 [https://maps.app.goo.gl/NrY71PkQW2oKMT4c9](https://maps.app.goo.gl/NrY71PkQW2oKMT4c9)
+
+我們悟孟寺＆雙龍寺是買[半日遊](https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F46137-5-hour-doi-suthep-temple-wat-umong-temple-tour%2F%3FclickId%3D5030a6fcc4)的行程，省去交通的困擾。
 
 ## 景點
 
@@ -221,17 +228,13 @@ tags: ['travel']
 
 但不喜歡動物表演的我們，就沒看老虎秀了。
 
-可以直接在 Klook 或 KKday 訂票。
+可以直接在 [Klook](https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F1112-night-safari-park-chiang-mai%2F%3FclickId%3Dd4010437b7) 或 [KKday](https://www.kkday.com/zh-tw/product/20563-chiang-mai-night-safari-ticket-thailand) 訂票。
 
 [https://maps.app.goo.gl/4aksP2QYc4HzHUkM9](https://maps.app.goo.gl/4aksP2QYc4HzHUkM9)
 
-[https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F1112-night-safari-park-chiang-mai%2F%3FclickId%3Dd4010437b7](https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F1112-night-safari-park-chiang-mai%2F%3FclickId%3Dd4010437b7)
-
-[https://www.kkday.com/zh-tw/product/20563-chiang-mai-night-safari-ticket-thailand](https://www.kkday.com/zh-tw/product/20563-chiang-mai-night-safari-ticket-thailand)
-
 ### 清邁大學
 
-![清邁大學](https://storage.googleapis.com/img.kaixsean.com/2023/chiangmai_university.JPG)
+![Chiang Mai University](https://img.kaixsean.com/2023/chiangmai_university.JPG)
 
 不管是國內還國外，我都特別喜歡逛大學校園，而且周邊也有商圈可以逛。不過交通尖峰時刻非常容易塞車，要注意行程安排。
 
@@ -241,11 +244,15 @@ tags: ['travel']
 
 泰國最高的地方，內有國王、皇后雙塔，也有健行步道，適合參加一日遊行程。
 
+![wachirathan waterfall](https://img.kaixsean.com/2023/wachirathan_waterfall.jpeg)
+
+![Kew Man Pan Rock](https://img.kaixsean.com/2023/Kew_Mae_Pan.jpeg)
+
+![Kew Man Pan](https://img.kaixsean.com/2023/Kew_Mae_Pan_part2.jpeg)
+
 [https://maps.app.goo.gl/4i3dbdRut8dRwNAw7](https://maps.app.goo.gl/4i3dbdRut8dRwNAw7)
 
-雖然我們的行程是在民宿直接跟民宿老闆訂購，但各個旅遊平台或是當地的街邊旅遊景點店也都有販售，可以再另行洽詢。在清邁真的很適合直接購買一日遊行程，體驗都很不錯。除了因他儂國家公園的一日遊行程外，我們也有買了悟孟寺＆雙龍寺半日遊的行程
-
-[https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F46137-5-hour-doi-suthep-temple-wat-umong-temple-tour%2F%3FclickId%3D5030a6fcc4](https://affiliate.klook.com/redirect?aid=14941&aff_adid=909022&k_site=https%3A%2F%2Fwww.klook.com%2Fzh-TW%2Factivity%2F46137-5-hour-doi-suthep-temple-wat-umong-temple-tour%2F%3FclickId%3D5030a6fcc4)
+雖然我們的行程是在民宿直接跟民宿老闆訂購，但各個旅遊平台或是當地的街邊旅遊景點店也都有販售，可以再另行洽詢。在清邁真的很適合直接購買一日遊行程，體驗都很不錯。
 
 ## 市集
 
@@ -275,15 +282,20 @@ tags: ['travel']
 
 ### Jing Jai Market Chiang Mai
 
+![Jing Jai Market](https://img.kaixsean.com/2023/Jing_Jai_Market.jpeg)
+
 我們整個去錯時間，晚上完全沒東西。
 
 [https://maps.app.goo.gl/jSfDgEfnx7KaerB27](https://maps.app.goo.gl/jSfDgEfnx7KaerB27)
 
 ### 瓦洛洛市場
 
+![Warorot](https://img.kaixsean.com/2023/Warorot.jpeg)
 傳統的市場，也是知名景點，路過看看、感受一下就好。
 
 ### kad farang village
+
+![Starbucks Chiang Mai](https://img.kaixsean.com/2023/starbucks_chiang_mai.jpeg)
 
 裡面有清邁特色的星巴克，晚上也有市集，白天就比較無聊些。
 
@@ -291,11 +303,13 @@ tags: ['travel']
 
 ## 民宿
 
-最後也要推薦一下，我在清邁時，熱情接待的民宿。早餐都是老闆娘親自下廚，很好吃！而且都是當地的特色美食。
-
 ### Thongran's House
 
+最後也要推薦一下，我在清邁時，熱情接待的民宿。早餐都是老闆娘親自下廚，很好吃！而且都是當地的特色美食。
+
 ![Thongran's House](https://img.kaixsean.com/2023/Thongrans%20_House.jpeg)
+
+![Tom Yam Kung](https://img.kaixsean.com/2023/tom_yam_kung.jpeg)
 [https://maps.app.goo.gl/RMnZYEwfoYrviE117](https://maps.app.goo.gl/RMnZYEwfoYrviE117)
 
 自從去玩清邁回來，就很時常想念清邁，我想我一定會再去的！
