fix: fix img link

--- a/data/posts/20240922-chiangmai.mdx
+++ b/data/posts/20240922-chiangmai.mdx
@@ -133,7 +133,8 @@ tags: ['travel']
 
 ### GRAPH
 
-![Graph no.18](https:/img.kaixsean.com/2023/graph_18.JPG)
+![Graph no.18](https://img.kaixsean.com/2023/graph_18.JPG)
+
 ![SOMPETCH](https://img.kaixsean.com/2023/sompetch.JPG)
 
 清邁最大的連鎖咖啡廳，每一間主題都不一樣。GRAPH 這間就在尼曼路一號商場裡面，甚是方便。
