feat: combind about and protfolio

--- a/data/posts/20161024-kyoto-nishiki-market.mdx
+++ b/data/posts/20161024-kyoto-nishiki-market.mdx
@@ -1,10 +1,13 @@
 ---
 title: '京都慢遊 京都廚房 - 京都'
-summary:  到達京都後，我們旅宿的地點就在錦市場附近，當然放完行李，就是直奔傳說中京都人的冰箱 - 錦市場。
-images:  ['https://img.kaixsean.com/2016/31452951162.jpg']
+summary: 到達京都後，我們旅宿的地點就在錦市場附近，當然放完行李，就是直奔傳說中京都人的冰箱 - 錦市場。
+images: ['https://img.kaixsean.com/2016/31452951162.jpg']
 date: '2016-10-24'
-tags: ['travel']
+tags:
+  - travel
+  - japan
 ---
+
 ![](https://img.kaixsean.com/2016/31452951162.jpg)
 
 這是我第一次去日本，同時也是第一次的自由行。回想我第一次出國，也不過就是去年在帛琉的員工旅行。但日本真的是一個很令人安心的地方，與台灣相近的文化及飲食，使得國與國的界線又更模糊了些。整個日本行下來，唯一的缺憾就是覺得自己沒有更好的英日語能力使自己能夠更自在些。
@@ -15,7 +18,7 @@ Day 1 關西機場 / 錦市場 / 錦天滿宮 / KYOTO GOGYO 五行 Ramen
 
 這次的京都旅，我們搭的是威航。
 
-老實說，我還滿喜歡威航的。位置空間很足夠，對腿長的人來說很 nice 啊。到達關西機場時，廣播還很跟得上潮流的說「可以關掉飛航抓寶可夢囉～」，實在很有趣又貼心。 
+老實說，我還滿喜歡威航的。位置空間很足夠，對腿長的人來說很 nice 啊。到達關西機場時，廣播還很跟得上潮流的說「可以關掉飛航抓寶可夢囉～」，實在很有趣又貼心。
 
 ![](https://img.kaixsean.com/2016/31227185930.jpg)
 
@@ -45,11 +48,11 @@ Day 1 關西機場 / 錦市場 / 錦天滿宮 / KYOTO GOGYO 五行 Ramen
 
 ![](https://img.kaixsean.com/2016/32196921641.jpg)
 
-而日本第三家分店的 Snoopy 茶屋也坐落在錦市場，而且就在我們去的前幾天開幕而已。 
+而日本第三家分店的 Snoopy 茶屋也坐落在錦市場，而且就在我們去的前幾天開幕而已。
 
 ![](https://img.kaixsean.com/2016/30789980343.jpg)
 
-天滿宮（てんまぐう），指的是祭祀日本學問之神<strong>菅原道真</strong>的神社，在日本各地都有天滿宮。相對於台灣來說的話，大概就是孔子或文昌帝君這樣掌管學業、學問的神祇。 錦天滿宮，與錦市場比鄰。 而連接著這兩者的還有新京極商店街，京都的新京極商店街，是繼1872年成立的淺草仲見世通後，日本第二古老的商店街。起初是效訪紐約百老匯而成立的一條商店街。 錦市場、錦天滿宮、新京極商店街，三者互相連結，逛起來相當方便。 
+天滿宮（てんまぐう），指的是祭祀日本學問之神<strong>菅原道真</strong>的神社，在日本各地都有天滿宮。相對於台灣來說的話，大概就是孔子或文昌帝君這樣掌管學業、學問的神祇。 錦天滿宮，與錦市場比鄰。 而連接著這兩者的還有新京極商店街，京都的新京極商店街，是繼1872年成立的淺草仲見世通後，日本第二古老的商店街。起初是效訪紐約百老匯而成立的一條商店街。 錦市場、錦天滿宮、新京極商店街，三者互相連結，逛起來相當方便。
 
 ![](https://img.kaixsean.com/2016/31227235930.jpg)
 
