--- a/data/posts/20170910-tokyo-kichijoji.mdx
+++ b/data/posts/20170910-tokyo-kichijoji.mdx
@@ -1,13 +1,16 @@
 ---
 title: '東京紀行 吉祥寺 - 日本'
-summary:  井の頭公園是東京都武藏野市和三鷹市的都立公園，就在吉祥寺車站附近。其本身也是個賞櫻勝地，但此次我們旅遊的時間正值初夏，我們故意挑在暑假來臨前夕，以避開可怕的人潮與昂貴的旺季。
-images:  ['https://img.kaixsean.com/2017/36160020784.jpg']
+summary: 井の頭公園是東京都武藏野市和三鷹市的都立公園，就在吉祥寺車站附近。其本身也是個賞櫻勝地，但此次我們旅遊的時間正值初夏，我們故意挑在暑假來臨前夕，以避開可怕的人潮與昂貴的旺季。
+images: ['https://img.kaixsean.com/2017/36160020784.jpg']
 date: '2017-09-10'
-tags: ['travel']
+tags:
+  - travel
+  - japan
 ---
+
 ![](https://img.kaixsean.com/2017/36160020784.jpg)
 
-繼上次出國的京都之旅已將近一年。 今年，則進行下一個目標，東京。 
+繼上次出國的京都之旅已將近一年。 今年，則進行下一個目標，東京。
 
 有之前京都的經驗後，這次東京之行就顯得比較輕鬆一點。由於對購物沒有太多的興趣，因此在行程安排上，也更加隨便（笑）。 這次的去程是搭虎航。虎航的座位相對威航真的小不少，前座椅背很容易抵到我的膝蓋。
 
