--- a/data/posts/20180304-shinjuku-tokyo.mdx
+++ b/data/posts/20180304-shinjuku-tokyo.mdx
@@ -1,9 +1,11 @@
 ---
 title: '東京紀行 新宿 - 日本'
-summary:  東京旅行的第二天，選擇離飯店不遠處的松屋作為在東京的第一份早餐。
-images:  ['https://img.kaixsean.com/2018/40453443271.jpg']
+summary: 東京旅行的第二天，選擇離飯店不遠處的松屋作為在東京的第一份早餐。
+images: ['https://img.kaixsean.com/2018/40453443271.jpg']
 date: '2018-03-04'
-tags: ['travel']
+tags:
+  - travel
+  - japan
 ---
 
 東京旅行的第二天，選擇離飯店不遠處的松屋作為在東京的第一份早餐。
@@ -100,7 +102,7 @@ tags: ['travel']
 
 ![](https://img.kaixsean.com/2018/40409633942.jpg)
 
-在朋友帶領下，晚餐於連鎖居酒屋，塚田農場 中目黒店 解決。這杯老奶奶梅子酒，因為名字很有趣，我們還討論了一番，到底是不是老奶奶釀的呢？XDD 
+在朋友帶領下，晚餐於連鎖居酒屋，塚田農場 中目黒店 解決。這杯老奶奶梅子酒，因為名字很有趣，我們還討論了一番，到底是不是老奶奶釀的呢？XDD
 
 ![](https://img.kaixsean.com/2018/40409633112.jpg)
 
@@ -109,4 +111,3 @@ tags: ['travel']
 Day 1 成田國際機場 > 讚兵衛 > 吉祥寺 > 井の頭公園 > いせや総本店 > 阿佐ケ谷
 
 Day 2 松屋 阿佐ケ谷 > 新宿御苑 > 原宿 > 竹下通 > 表參道 > Afuri 阿夫利拉麵 麻布十番店 > 浪花家総本店 > 澀谷 > 代官山蔦屋書店 > 中目黑高架下 > 塚田農場 中目黒店 > 阿佐ケ谷
-
