--- a/data/posts/20180725-kiyosumi-shirakawa-tokyo.mdx
+++ b/data/posts/20180725-kiyosumi-shirakawa-tokyo.mdx
@@ -1,9 +1,11 @@
 ---
 title: '東京紀行 清澄白河 - 日本'
-summary:  東京旅行的第三天，基於前一天早餐吃了離飯店不遠的松屋，今日決定要嘗試台灣也有的「吉野家」。
-images:  ['https://img.kaixsean.com/2018/42810273014.jpg']
+summary: 東京旅行的第三天，基於前一天早餐吃了離飯店不遠的松屋，今日決定要嘗試台灣也有的「吉野家」。
+images: ['https://img.kaixsean.com/2018/42810273014.jpg']
 date: '2018-07-25'
-tags: ['travel']
+tags:
+  - travel
+  - japan
 ---
 
 東京旅行的第三天，基於前一天早餐吃了離飯店不遠的松屋，今日決定要嘗試台灣也有的「吉野家」。
