feat: update author data and site metadata

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -3,18 +3,37 @@ name: Kaix
 avatar: /static/images/avatar.png
 occupation: Software Engineer
 email: me@kaixsean.com
-twitter: https://twitter.com/kaixsean
+twitter: https://x.com/kaixsean
 linkedin: https://www.linkedin.com/in/kaixiangchen/
 github: https://github.com/kaixsean
 ---
 
-我是一位全端軟體工程師。  
-我喜歡 Web，也開發過 APP。  
-我很好奇，也喜歡紀錄。  
-在這裡我會分享我的興趣與學習，以科技、自我成長、旅行為主。
+彰化人，北漂台北當軟體工程師。雖然寫了近十年的程式，但程度也是爾爾。
 
-I am a full-stack software engineer with a passion for web development and mobile app development. I am also a curious learner who loves to document my experiences.
+喜歡科技，也熱愛人文藝術，總被認為是文青一枚，但自己卻不這麼認為。
 
-On this blog, I will share my interests and learnings in the areas of technology, personal growth, and travel.
+畢生熱衷於「做喜歡的事，讓喜歡的事有價值。」，夢想是能活出生活的品味，活出自己喜歡的樣子。
 
-I hope you will enjoy reading my posts and find them informative and inspiring.
+MBTI 是 INFP，這個世界太快太急，得有個部落格，才能讓我能好好喘口氣，面對內心的無數聲音。
+
+雖然是原住民，但不會唱歌，也不愛跳舞，興趣是游泳、閱讀、繪畫、寫作、旅行，安靜又有那麼點孤僻。
+
+**最喜歡的地方**
+
+- 福岡
+- 清邁
+- 京都
+- 帛琉
+
+**喜歡的影視作品**
+
+- 鋼之鍊金術師
+- 海邊的曼徹斯特
+- 星際效應
+- 黑暗騎士
+
+**喜歡的樂團**
+
+- Coldplay
+
+工作方面的資訊，請查閱 [Kaixiang’s Portfolio](https://portfolio.kaixsean.com)
