feat: update tag-data.json and posts

--- a/data/posts/20180722-git-note.mdx
+++ b/data/posts/20180722-git-note.mdx
@@ -1,10 +1,11 @@
 ---
 title: 'Git 筆記'
-summary:  git 一直是工作過程中，每天要碰的東西。有時候一些比較不常用的指令會忘記，所以記下來要查也比較好查。
-images:  ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
+summary: git 一直是工作過程中，每天要碰的東西。有時候一些比較不常用的指令會忘記，所以記下來要查也比較好查。
+images: ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
 date: '2018-07-22'
-tags: ['Git']
+tags: ['Dev']
 ---
+
 git 一直是工作過程中，每天要碰的東西。有時候一些比較不常用的指令會忘記，所以記下來要查也比較好查。
 這份文件會隨著我的學習不段更新。
 
