--- a/data/posts/20170425-how-install-ubuntu-golang.mdx
+++ b/data/posts/20170425-how-install-ubuntu-golang.mdx
@@ -1,10 +1,11 @@
 ---
 title: '如何在 ubuntu 16.04 安裝 Go 語言'
-summary:  
-images:  ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
+summary:
+images: ['https://img.kaixsean.com/2022/ilya-pavlov-unsplash.jpeg']
 date: '2017-04-25'
-tags: ['golang']
+tags: ['Dev']
 ---
+
 # 下載並解壓縮
 
 ```
@@ -14,13 +15,14 @@ sudo curl -O https://storage.googleapis.com/golang/go1.8.linux-amd64.tar.gz
 sudo tar -xvf go1.8.linux-amd64.tar.gz
 ```
 
-
 # 設定 Go Paths
+
 首先，開啟 profile
 
 `sudo nano ~/.profile`
 
 # 編輯 profile
+
 ```
 export GOROOT=$HOME/go
 export PATH=$PATH:$GOROOT/bin
@@ -39,15 +41,18 @@ mkdir $HOME/go_projects/src/hello
 ```
 
 # 設定Paths
+
 ```
 export GOPATH="$HOME/go_projects"
 export GOBIN="$GOPATH/bin
 ```
 
 # 編輯第一個檔案
+
 `nano $HOME/go_projects/src/hello/hello.go`
 
 # 編寫第一個程式
+
 ```
 package main
 import "fmt"
@@ -57,6 +62,7 @@ func main() {
 ```
 
 # 執行程式
+
 ```
 go install $GOPATH/src/hello/hello.go
 $GOBIN/hello
