--- a/data/posts/20180630-macos-ssh-chinese.mdx
+++ b/data/posts/20180630-macos-ssh-chinese.mdx
@@ -1,9 +1,9 @@
 ---
 title: '解決 macOS SSH 連線中文亂碼的問題'
-summary:  前陣子連線到遠端的 Linux Server 要 commit 時發現中文都是亂碼，找了好久，終於找出解答。 問題出在LANG的設定。
-images:  ['https://img.kaixsean.com/2018/42199701335.jpg']
+summary: 前陣子連線到遠端的 Linux Server 要 commit 時發現中文都是亂碼，找了好久，終於找出解答。 問題出在LANG的設定。
+images: ['https://img.kaixsean.com/2018/42199701335.jpg']
 date: '2018-06-30'
-tags: ['MacOS']
+tags: ['Dev']
 ---
 
 前陣子連線到遠端的 Linux Server 要 commit 時發現中文都是亂碼，找了好久，終於找出解答。 問題出在LANG的設定。
@@ -12,11 +12,11 @@ tags: ['MacOS']
 
 ![台灣地區/英文](https://img.kaixsean.com/2018/42199701335.jpg)
 
-這樣之下，SSH 連到 linux 伺服器就會有中文亂碼的問題。 在本機的 Terminal 輸入 "locale" LC_CTYPE 是 UTF-8。 
+這樣之下，SSH 連到 linux 伺服器就會有中文亂碼的問題。 在本機的 Terminal 輸入 "locale" LC_CTYPE 是 UTF-8。
 
 ![](https://img.kaixsean.com/2018/42199701425.jpg)
 
-那假如換成 台灣地區/繁體中文 
+那假如換成 台灣地區/繁體中文
 
 ![](https://img.kaixsean.com/2018/29232072838.jpg)
 
@@ -24,11 +24,11 @@ tags: ['MacOS']
 
 ![](https://img.kaixsean.com/2018/42199701145.jpg)
 
-那如果再換成 美國地區/英文 呢 
+那如果再換成 美國地區/英文 呢
 
 ![](https://img.kaixsean.com/2018/42199701135.jpg)
 
-就變成 en_US.UTF-8 
+就變成 en_US.UTF-8
 
 ![](https://img.kaixsean.com/2018/42199701385.jpg)
 
@@ -51,7 +51,7 @@ export LC_ALL=en_US.UTF-8
 export LANG=en_US.UTF-8
 ```
 
-這樣就可以本機下中文亂碼的問題了! 
+這樣就可以本機下中文亂碼的問題了!
 
 // 2018.07.07 更新
 PS. 提醒一下，如果採用 台灣地區/繁體中文 或是 美國地區/英文 的話，「啟動時設定地區環境變數」就必須打勾，這樣才能使用所設定的地區變數。不然找不到地區變數，也會變成亂碼。
